fixed extra padding above footer

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -62,4 +62,5 @@
 .hr {
     border-top: 1px solid #DADFD0;
     border-bottom: 0px;
+    margin: 0px 0px 0px 0px;
 }
